# nvim

./: .editorconfig  .gitignore  .stylua.toml  Justfile  README.md  TODO.md  color.vim  init.lua  init.vim  lazy-lock.json  lazyvim.json  migrate-to-native-lsp.md  plug.vim  pyproject.toml  requirements.txt  scratch_config.json
lib/spotify.nvim/: pyproject.toml
lib/spotify.nvim/rplugin/python3/spotify/: interface.py  plugin.py
lsp/: bacon_ls.lua  basedpyright.lua  harper_ls.lua  lua_ls.lua  ruff.lua  ts_ls.lua  ty.lua  vtsls.lua
lua/: autocmds.lua  commands.lua  config.lua  filetype.lua  globals.lua  keymaps.lua  options.lua  projects.lua
lua/config/: autocmds.lua  filetype.lua  keymaps.lua  lazy.lua  options.lua  user_commands.lua
lua/josh/: autocmds.lua  commands.lua  filetype.lua  init.lua  keymaps.lua  options.lua  patch.lua
lua/josh/plugins/: coding.lua  colorscheme.lua  copilot.lua  dap.lua  editor.lua  formatting.lua  git.lua  lsp.lua  test.lua  treesitter.lua  ui.lua  util.lua
lua/josh/plugins/lang/: django.lua  docker.lua  html.lua  just.lua  markdown.lua  python.lua  rust.lua  svelte.lua  tailwind.lua  typescript.lua  yaml.lua
lua/josh/utils/: file.lua  git.lua  globals.lua  path.lua  vim.lua
lua/lang/: init.lua
lua/lazyvim/: config.lua
lua/lazyvim/lsp/: keymaps.lua
lua/lazyvim/util/: init.lua  plugin.lua
lua/lib/: spotify.lua
lua/lsp/: capabilities.lua  diagnostics.lua  handlers.lua  init.lua  keymaps.lua  servers.lua
lua/lsp/features/: codelens.lua  format.lua  inlayhints.lua
lua/plugins/: blink.lua  chatgpt.lua  colorschemes.lua  conform.lua  dap.lua  dial.lua  diffview.lua  django.lua  edgy.lua  editor.lua  fidget.lua  flash.lua  git.lua  gitsigns.lua  grapple.lua  inc-rename.lua  just.lua  lazydev.lua  llm.lua  lspconfig.lua  lualine.lua  markview.lua  mason.lua  mini-hipatterns.lua  mini-surround.lua  mini.lua  neotest.lua  notes.lua  nvim-dap.lua  obsidian.lua  octo.lua  oil.lua  prettier.lua  python.lua  quicker.lua  render-markdown.lua  snacks-dashboard.lua  snacks-picker.lua  snacks-zen.lua  snacks.lua  (+12 more)
lua/plugins/extras/ai/: avante.lua  codecompanion.lua
lua/plugins/extras/coding/: supermaven.lua
lua/plugins/extras/formatting/: biome.lua
lua/plugins/extras/lsp/: django-lsp.lua  djls.lua
lua/plugins/lang/: 11ty.lua  astro.lua  django.lua  docker.lua  dot.lua  javascript.lua  json.lua  just.lua  markdown.lua  python.lua  rust.lua  svelte.lua  tailwind.lua  typescript.lua  typst.lua  yaml.lua
lua/plugins/mini/: hipatterns-test.css  hipatterns.lua  init.lua  pairs.lua
lua/projects/: 11ty.lua  init.lua
lua/utils/: django.lua  file.lua  format.lua  git.lua  globals.lua  icons.lua  init.lua  lazy.lua  mason.lua  notes.lua  path.lua  projects.lua  spotify.lua  string.lua  term.lua  tokyonight-css.lua  vim.lua
rplugin/python3/spotify/: __init__.py  models.py  plugin.py  pyproject.toml  runner.py
